--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "author": "Jase S Naut <xricoxdrumsx@gmail.com>",
   "private": true,
   "scripts": {
+    "start": "npx quasar dev",
     "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "firebase": "^9.17.1",
+    "axios": "^1.3.4",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
